updated login/registration